# FPD_STEP_V1

./: .gitignore  README.md  engine_pipeline.py  environment.yml  pyproject.toml  requirements.txt
docs/: BUILD_NOTES.md  architecture.md  assumptions.md  io_contracts.md  topology.md
scripts/: check_watertight_step.py
src/engine_reconstruction/: __init__.py
src/engine_reconstruction/export/: __init__.py  step_exporter.py
src/engine_reconstruction/geometry/: __init__.py  boundary_reconstruction.py  bspline_builder.py  face_builder.py  face_healing.py  occ_utils.py  shared_edge_builder.py  shell_builder.py  solid_builder.py
src/engine_reconstruction/grid/: __init__.py  downsampling.py  grid_statistics.py  grid_validator.py
src/engine_reconstruction/infrastructure/: __init__.py  config.py  data_types.py  exceptions.py  logging.py  provenance.py  settings.py
src/engine_reconstruction/io/: __init__.py  cache.py  file_discovery.py  fpd_parser.py  metadata.py
src/engine_reconstruction/pipeline/: engine_pipeline.py
src/engine_reconstruction/topology/: __init__.py  expected_topology.py  neighbour_detector.py  orientation_detector.py  topology_analyser.py  topology_graph.py
src/engine_reconstruction/validation/: __init__.py  geometry_validator.py  topology_validator.py  watertight_validator.py
src/engine_reconstruction/visualization/: __init__.py  diagnostics.py  render.py  viewer.py
tests/: conftest.py  test_file_discovery.py  test_fpd_parser.py  test_geometry_occ.py  test_grid_validator.py  test_integration.py  test_orientation_detector.py  test_step_validation.py  test_topology.py  test_topology_correctness.py
